[gd_scene load_steps=10 format=2]

[ext_resource path="res://scenes/characters/ennemys/EnemyMage.gd" type="Script" id=1]
[ext_resource path="res://art/characters/Enemys/b√∂sermagier.png" type="Texture" id=2]
[ext_resource path="res://art/weapon/Ennemies/MageStaff.png" type="Texture" id=3]
[ext_resource path="res://art/UI/Lifebar/behind.png" type="Texture" id=4]
[ext_resource path="res://art/UI/Lifebar/Over.png" type="Texture" id=5]
[ext_resource path="res://art/UI/Lifebar/inFront.png" type="Texture" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 64, 10 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 6.45252, 6.05683 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 8.20127, 3.73553 )

[node name="EnemyMage" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 136
script = ExtResource( 1 )

[node name="Body" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="Body"]
texture = ExtResource( 2 )

[node name="Detection" type="Area2D" parent="Body"]
collision_layer = 0
collision_mask = 1024

[node name="CollisionShape2D" type="CollisionShape2D" parent="Body/Detection"]
position = Vector2( -64, 0 )
shape = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.0335215, 1.89678 )
shape = SubResource( 2 )

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
visible = false
position = Vector2( 1.21156, -2.64748 )
scale = Vector2( 1.69552, 1.26475 )
physics_process_parent = true

[node name="KillDetector" type="Area2D" parent="."]
position = Vector2( 0, -0.0510073 )
monitorable = false
collision_layer = 2
collision_mask = 0
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="KillDetector"]
modulate = Color( 0.937255, 0.0470588, 0.964706, 1 )
position = Vector2( -0.0854225, 0.186214 )
shape = SubResource( 3 )

[node name="HealthBar" type="TextureProgress" parent="."]
modulate = Color( 1, 0.00392157, 0.00392157, 1 )
margin_left = -12.5302
margin_top = -18.3455
margin_right = 19.4698
margin_bottom = 13.6545
rect_scale = Vector2( 0.75, 0.5 )
max_value = 50.0
texture_under = ExtResource( 4 )
texture_over = ExtResource( 5 )
texture_progress = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Staff" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )

[node name="FireballSpawner" type="Position2D" parent="."]
position = Vector2( 0.804308, -4.27891 )

[node name="FireballTimer" type="Timer" parent="."]
[connection signal="body_entered" from="Body/Detection" to="." method="_on_Detection_body_entered"]
[connection signal="body_exited" from="Body/Detection" to="." method="_on_Detection_body_exited"]
[connection signal="area_entered" from="KillDetector" to="." method="_on_KillDetector_area_entered"]
[connection signal="timeout" from="FireballTimer" to="." method="_on_FireballTimer_timeout"]
